tests/parser/extra_tokens.expected
<string>:1:7: error: unexpected token: LParen
4 + 5 ()
      ^